# NFL-Big-Data-Bowl-2026

./: .gitignore  README.md  config.py  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: baseline_linear.py  load_data.py  model_lstm.py  model_per_role.py  model_per_role_v2.py
